--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -5,7 +5,7 @@
 }
 
 .active {
-  &.tabs-advertisement__item {
+  &.tabs-dashboard__item {
     background-color: #c4dbff;
   }
 
@@ -417,6 +417,7 @@
   height: toRem(41);
   top: 50%;
   transform: translate(0, -50%);
+  background-color: transparent !important;
   svg {
     width: 100%;
     height: 100%;
