--- a/src/assets/scss/advertisement.scss
+++ b/src/assets/scss/advertisement.scss
@@ -262,24 +262,31 @@
   &__input {
     // padding: 0;
     display: grid;
+    align-items: stretch;
+    justify-content: center;
     position: relative;
     cursor: pointer;
     width: 100%;
     height: 100%;
-    @include adaptiveValue("height", 320, 220);
-    &::before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      max-width: toRem(150);
-      max-height: toRem(150);
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: url("/icons/image.svg") center / cover no-repeat;
+    // @include adaptiveValue("height", 320, 220);
+    height: 220px;
+    @media (min-width: $tablet) {
+      height: 320px;
     }
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 100%;
+    //   max-width: toRem(150);
+    //   max-height: toRem(150);
+    //   top: 50%;
+    //   left: 50%;
+    //   transform: translate(-50%, -50%);
+    //   background: url("/icons/image.svg") center / cover no-repeat;
+    // }
     input {
+      position: absolute;
       width: 0;
       height: 0;
       opacity: 0;
