add forum categories and search

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -587,7 +587,7 @@
   display: block;
   padding: toRem(14);
   font-size: toRem(14);
-  // outline: 1px solid #b0bfd7 !important;
+  outline: 1px solid #b0bfd7 !important;
   ul {
     list-style-type: disc;
     padding-left: toRem(20);
