--- a/src/assets/scss/base/forms/input.scss
+++ b/src/assets/scss/base/forms/input.scss
@@ -51,7 +51,7 @@ input::-webkit-inner-spin-button {
 
 .input--error {
   outline: 1px solid #ff0000 !important;
-  &::placeholder {
-    color: #ff0000 !important;
-  }
+  // &::placeholder {
+  //   color: #ff0000 !important;
+  // }
 }
