--- a/src/assets/scss/product-card.scss
+++ b/src/assets/scss/product-card.scss
@@ -107,6 +107,7 @@
     gap: toRem(40);
 
     .top-product__body {
+      width: 100%;
       flex-direction: column;
       text-align: center;
       align-items: center;
