--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -162,7 +162,7 @@
 .item-advert {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: toRem(20);
   background-color: #fff;
@@ -228,7 +228,7 @@
   }
   // .item-advert__price
   &__price {
-    font-size: toRem(35);
+    font-size: toRem(24);
     font-weight: 600;
     color: var(--blueColor);
   }
