new locale and small fixes

--- a/src/assets/scss/advertisement.scss
+++ b/src/assets/scss/advertisement.scss
@@ -68,6 +68,7 @@
     width: fit-content;
     height: fit-content;
     top: 5px;
+    background-color: transparent !important;
     @media (min-width: $tablet) {
       display: none;
     }
