--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -170,7 +170,7 @@
 
   padding: toRem(8) toRem(8) toRem(20) toRem(8);
   border-radius: toRem(7);
-  min-width: toRem(260);
+  // min-width: toRem(260);
   width: 100%;
   // max-width: toRem(305);
   transition: all 0.3s ease;
