--- a/src/assets/scss/advertisement.scss
+++ b/src/assets/scss/advertisement.scss
@@ -251,7 +251,7 @@
     display: grid;
   }
   .swiper-button {
-    display: block;
+    display: flex;
   }
   .swiper-button-prev {
     left: 20px;
