--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -427,26 +427,41 @@
   height: toRem(41);
   top: 50%;
   transform: translate(0, -50%);
-  background-color: transparent !important;
-  svg {
-    width: 100%;
-    height: 100%;
-    * {
-      transition: all 0.3s ease;
+  // background-color: transparent !important;
+  background-color: var(--blueColor);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  border: 1px solid var(--blueColor);
+  transition: all 0.3s ease;
+  @media (any-hover: hover) {
+    &:hover {
+      background-color: #0b4397;
     }
   }
+  // svg {
+  //   width: 100%;
+  //   height: 100%;
+  //   * {
+  //     transition: all 0.3s ease;
+  //   }
+  // }
   @media (max-width: em(1400)) {
     display: none;
   }
   &.swiper-button-disabled {
-    svg {
-      rect {
-        fill: #fff;
-      }
-      path {
-        fill: var(--blueColor);
-      }
-    }
+    background-color: #fff;
+    color: var(--blueColor);
+    // svg {
+    //   rect {
+    //     fill: #fff;
+    //   }
+    //   path {
+    //     fill: var(--blueColor);
+    //   }
+    // }
   }
 }
 
