--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -172,6 +172,7 @@
   border-radius: toRem(7);
   // min-width: toRem(260);
   width: 100%;
+  min-height: 100%;
   // max-width: toRem(305);
   transition: all 0.3s ease;
   @media (any-hover: hover) {
@@ -188,7 +189,8 @@
   &__image {
     transition: all 0.3s ease;
     width: 100%;
-    height: toRem(335);
+    aspect-ratio: 289/335;
+    // height: toRem(335);
     overflow: hidden;
     border-radius: toRem(7);
     border: 1px solid var(--border);
@@ -467,6 +469,7 @@
 
 .swiper-slide {
   cursor: pointer;
+  height: 100%;
 }
 
 .swiper-button-prev {
