--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -92,17 +92,17 @@ body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  @supports (overflow: clip) {
+}
+@supports (overflow: clip) {
+  .wrapper {
     overflow: clip;
   }
-  // Притискаємо footer
-  > main {
-    flex: 1 1 auto;
-  }
-  // Фікс для слайдерів
-  > * {
-    min-width: 0;
-  }
+}
+.wrapper > main {
+  flex: 1 1 auto;
+}
+.wrapper > * {
+  min-width: 0;
 }
 // Обмежуючий контейнер ======================================================================================================================================================================================================================
 /*
